force-app/main/default/objects/GEP_Accounts__c/GEP_Accounts__c.object-meta.xml
<CustomObject>
    <label>GEP Accounts</label>
    <nameField>
        <label>GEP Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEP Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>