force-app/main/default/objects/GEP_Accounts__c/fields/Build_Complete_Actual__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete_Actual__c</fullName>
    <label>Build Complete (Actual)</label>
    <type>Date</type>
</CustomField>