force-app/main/default/objects/GEP_Accounts__c/fields/Complete_MSP_Scope_is_Live__c.field-meta.xml
<CustomField>
    <fullName>Complete_MSP_Scope_is_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GEP Field</description>
    <label>Complete MSP Scope is Live?</label>
    <type>Checkbox</type>
</CustomField>