force-app/main/default/objects/GEP_Accounts__c/fields/Go_Live_Quarter_Actual__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Quarter_Actual__c</fullName>
    <description>GEP field to capture the actual Go Live Quarter</description>
    <label>Go Live Quarter (Actual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quarter</valueSetName>
    </valueSet>
</CustomField>