force-app/main/default/objects/GEP_Accounts__c/fields/Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Date__c</fullName>
    <description>GEP field to capture the kickoff date to start the implementation of embedded payroll portal</description>
    <label>Kickoff Date</label>
    <type>Date</type>
</CustomField>