force-app/main/default/objects/GEP_Accounts__c/fields/Last_QBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_QBR_Date__c</fullName>
    <label>Last QBR Date</label>
    <type>Date</type>
</CustomField>