force-app/main/default/objects/GEP_Accounts__c/fields/MDF_Eligible__c.field-meta.xml
<CustomField>
    <fullName>MDF_Eligible__c</fullName>
    <description>Shows if the partner is eligible for the Marketing Development Funds</description>
    <label>MDF Eligible?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>