force-app/main/default/objects/GEP_Accounts__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Holds the MRR from the Partner</description>
    <label>MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>