force-app/main/default/objects/GEP_Accounts__c/fields/Next_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone_Date__c</fullName>
    <description>GEP field to indicate the date set to achieve the next milestone</description>
    <label>Next Milestone Date</label>
    <type>Date</type>
</CustomField>