force-app/main/default/objects/GEP_Accounts__c/fields/Next_QBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_QBR_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next QBR Date</label>
    <type>Date</type>
</CustomField>