force-app/main/default/objects/GEP_Accounts__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>GEP field to capture the next steps</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>