force-app/main/default/objects/GEP_Accounts__c/fields/Partnership_Goals_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Goals_Pilot__c</fullName>
    <label>Partnership Goals (Pilot)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>