force-app/main/default/objects/GEP_Accounts__c/fields/Security_Notes__c.field-meta.xml
<CustomField>
    <fullName>Security_Notes__c</fullName>
    <description>GEP field to capture the notes related to security review</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>