force-app/main/default/objects/GEP_Accounts__c/fields/Security_Review_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Security_Review_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GEP field to indicate the user that completed the Security Review</description>
    <label>Security Review Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>GEP Accounts</relationshipLabel>
    <relationshipName>GEP_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>